syntax = "proto3";

package kv;

option go_package = "github.com/pixperk/plethora/proto";

message VectorClock {
  map<string, uint64> entries = 1;
}

message Value {
  string data = 1;
  VectorClock clock = 2;
}

message HeartbeatMessage{
  string node_id = 1;
}

message PutRequest {
  string key = 1;
  Value value = 2;
}

message HintedPutRequest {
  string key = 1;
  Value value = 2;
  string target_node_id = 3;
}

message PutResponse {}

message GetRequest {
  string key = 1;
}

message GetResponse {
  repeated Value values = 1;
  bool found = 2;
}

service KV {
  rpc Put(PutRequest) returns (PutResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc HintedPut(HintedPutRequest) returns (PutResponse);
  rpc Heartbeat(stream HeartbeatMessage) returns (stream HeartbeatMessage);
}
